hphp/test/zend/good/ext/gd/tests/colormatch.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists('imagecolormatch')) die("skip gd extension not available\n");
}
