hphp/test/zend/bad/ext/mbstring/tests/mb_send_mail01.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
	die('skip.. Not valid for Windows');
}
if (!function_exists("mb_send_mail") || !mb_language("neutral")) {
	die("skip mb_send_mail() not available");
}
?>